--- a/server/package.json
+++ b/server/package.json
@@ -6,18 +6,23 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon src/server.js",
-    "start": "PORT=5004 node src/server.js"
+    "watch": "nodemon build/server.js",
+    "start": "PORT=5004 node --experimental-specifier-resolution=node build/server.js",
+    "build": "tsc && cp -r ./src/data ./build/data"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "csv-parse": "^5.3.6",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11"
   }
