--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "install": "npm run install-server && npm run install-client",
     "server": "npm run watch --prefix server",
     "client": "npm run start --prefix client",
+    "deploy": "npm run build --prefix client && npm start --prefix server",
     "watch": "npm run server & npm run client"
   },
   "keywords": [],
