--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.6",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   },
@@ -24,6 +25,7 @@
     "@types/cors": "^2.8.13",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11"
   }
 }
