--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "install-server": "npm i --prefix server",
     "install-client": "npm i --prefix client",
     "install": "npm run install-server && npm run install-client",
     "server": "npm run watch --prefix server",
     "client": "npm run start --prefix client",
+    "watch": "npm run server & npm run client",
     "deploy": "npm run build --prefix client && npm start --prefix server",
-    "watch": "npm run server & npm run client"
+    "test": "npm test --prefix sever && npm test --prefix client"
   },
   "keywords": [],
   "author": "",
