--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "client": "npm run start --prefix client",
     "watch": "npm run server & npm run client",
     "deploy": "npm run build --prefix client && npm start --prefix server",
+    "deploy-cluster": "npm run build --prefix client && npm run cluster && npm start --prefix server",
     "test": "npm test --prefix sever && npm test --prefix client"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.1.4",
+    "mongoose": "^7.2.3",
+    "pm2": "^5.3.0"
+  }
 }
